--- a/localite/src/styles/navbar.css
+++ b/localite/src/styles/navbar.css
@@ -56,6 +56,13 @@
     .hamburger {
       display: block;
     }
+
+    .navbar {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: #333;
+    }
   
     .navbar-links {
       flex-direction: column;
