--- a/localite/src/styles/footer.css
+++ b/localite/src/styles/footer.css
@@ -1,9 +1,10 @@
 /* Footer Styles */
 .footer {
-    background-color: #333;
-    color: #fff;
-    padding: 40px 20px;
+  background-color: #2b3149;
+  color: #fff;
+  padding: 0px 20px 10px 20px;
   }
+ 
   
   .footer-content {
     display: flex;
@@ -47,16 +48,17 @@
   .footer-section form input {
     padding: 8px;
     border: none;
-    border-radius: 4px 0 0 4px;
+    width: 270px;
+    border-radius: 30px;
   }
   
   .footer-section form button {
-    background-color: #fff;
-    color: #333;
+    background-color: #f61717;
+    border-radius: 30px;
+    color: white;
     border: none;
-    margin-left: 20px;
+    margin-left: -25px;
     padding: 8px 12px;
-    border-radius: 0 4px 4px 0;
     cursor: pointer;
   }
   
@@ -65,7 +67,24 @@
     /* margin-top: 30px; */
     font-size: 14px;
   }
+
+  .whitelogo{
+    width: 200px;
+  }
+
+  .footerline{
+    margin-top: 5px;
+    background-color: red;
+    border-color: red;
+  }
+
+  .footer-section img{
+    width: 30px;
+    border-radius: 50%;
+    margin-left: 20px;
+  }
   
+
   /* Mobile Styles */
   @media (max-width: 768px) {
   
