--- a/localite/src/styles/home.css
+++ b/localite/src/styles/home.css
@@ -62,6 +62,7 @@ video{
   margin: auto;
   font-size: 50px;
   margin-top: 20px;
+  margin-bottom: 30px;
   /* font-weight: bold; */
 }
 #services h1{
@@ -403,8 +404,8 @@ font-size: smaller;
 }
 
 .footerline {
-  width: 95%;
-  margin-top: 5px;
+  width: 85%;
+  margin-top: 20px;
   background-color: red;
   border-color: red;
 }
@@ -524,6 +525,7 @@ video{
   margin: auto;
   font-size: 20px;
   margin-top: 20px;
+  margin-bottom: 20px;
   font-weight: bold;
 }
 
