--- a/localite/src/styles/navbar.css
+++ b/localite/src/styles/navbar.css
@@ -1,7 +1,8 @@
 .navbar {
-  width: 60%;
+  width: 55%;
   margin: auto;
-  margin-top: -100px;
+  margin-top: -120px;
+  margin-left: 25%;
   display: flex;
   justify-content: space-between;
   padding: 20px;
@@ -20,8 +21,8 @@
 }
 
 .navbar img {
-  width: 40px;
-  height: 40px;
+  width: 48px;
+  height: 48px;
 }
 
 hr {
