--- a/localite/src/styles/home.css
+++ b/localite/src/styles/home.css
@@ -4,6 +4,89 @@ body {
   margin: auto;
 }
 
+#merchantform{
+  width: 55%;
+}
+
+/* App.css or your main stylesheet */
+
+/* Overlay styles */
+.overlay {
+  background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Modal styles */
+.modal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 80%;
+  max-width: 800px;
+  margin-top: -8000px;
+  position: absolute;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 24px;
+  cursor: pointer;
+  background: none;
+  border: none;
+  color: #000;
+}
+
+video {
+  width: 100%;
+  height: auto;
+}
+
+
+/* styles.css or your CSS module */
+.heading-container {
+  position: relative;
+  overflow: hidden;
+  height: 1.5em; /* Adjust based on your font size */
+}
+
+.heading-content {
+  position: absolute;
+  width: 100%;
+  display: flex;
+}
+
+.heading-name {
+  flex: 1;
+  white-space: nowrap;
+}
+
+.slide-up-enter {
+  transform: translateY(100%);
+}
+
+.slide-up-enter-active {
+  transform: translateY(0);
+  transition: transform 0.5s ease;
+}
+
+.slide-up-exit {
+  transform: translateY(0);
+}
+
+.slide-up-exit-active {
+  transform: translateY(-100%);
+  transition: transform 0.5s ease;
+}
+
+
+
 .home-container {
   width: auto;
   margin-left: 10px;
@@ -479,6 +562,23 @@ html, body {
   background-color: #edf4ff;
   margin: auto;
   box-sizing: border-box;
+}
+
+.modal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 80%;
+  max-width: 800px;
+  margin-top: -10200px;
+  position: absolute;
+}
+
+#merchantform{
+  width: 90%;
 }
 
 .home-container p {
