--- a/localite/src/styles/home.css
+++ b/localite/src/styles/home.css
@@ -575,7 +575,7 @@ html, body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: #fff;
+  /* background: #fff; */
   padding: 20px;
   border-radius: 8px;
   width: 80%;
