--- a/localite/src/styles/navbar.css
+++ b/localite/src/styles/navbar.css
@@ -38,6 +38,7 @@ hr {
   .navbar {
     width: 100%;
     margin: auto;
+    margin-top: -20px;
     display: flex;
     justify-content: space-between;
     padding: 20px;
