--- a/localite/src/styles/home.css
+++ b/localite/src/styles/home.css
@@ -181,6 +181,9 @@ video {
   text-align: left;
 }
 
+.whyusdiv h1{
+  margin-top: -10px;
+}
 .whyusdiv p{
   font-size: 40px;
 }
@@ -210,6 +213,7 @@ video {
 
 .howdiv img{
  width: 500px;
+ height: 350px;
 }
 
 .howdiv h4{
@@ -270,9 +274,19 @@ border-radius: 30px;
 }
 
 .featurediv {
+  padding-top: 40px;
+  padding-bottom: 60px;
+
+  background-color: #2b3149;
+  border-radius: 20px;
+  color: white;
   text-align: center;
   margin: auto;
   width: 100%;
+}
+
+.featurediv h1{
+  margin-top: -20px;
 }
 
 /* .featurediv img {
@@ -321,7 +335,7 @@ border-radius: 30px;
 
 .sellwith {
   width: 100%;
-  margin: auto;
+  margin-top: 50px;
   text-align: center;
 }
 
@@ -334,6 +348,11 @@ border-radius: 30px;
   padding-top: 20px;
   padding-bottom: 20px;
   box-sizing: border-box;
+}
+
+
+.frdiv .lh1{
+  color: #f61717;
 }
 
 .sediv {
@@ -726,6 +745,7 @@ video{
 
 .featurediv img {
   width: 80%;
+  height: fit-content;
   border-radius: 20px;
 }
 
@@ -775,7 +795,7 @@ video{
 
 .sellwith {
   width: 100%;
-  margin: auto;
+  margin-top: 20px;
   text-align: center;
 }
 
