--- a/localite/src/styles/home.css
+++ b/localite/src/styles/home.css
@@ -123,7 +123,7 @@ video {
 
 .firstdiv {
   font-size: x-large;
-  margin-top: 40px;
+  /* margin-top: 40px; */
   text-align: center;
   justify-content: center;
 }
@@ -633,7 +633,7 @@ html, body {
 
 .firstdiv {
   font-size: medium;
-  margin-top: -20px;
+  margin-top: -15px;
   text-align: center;
   justify-content: center;
 }
