--- a/localite/src/styles/login.css
+++ b/localite/src/styles/login.css
@@ -1,15 +1,35 @@
 /* Login Component Styles */
 .login-container {
-    background-color: white;
     padding: 2rem;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     width: 100%;
+    height: 750px;
     max-width: 400px;
     box-sizing: border-box;
     margin: 0 auto; /* Centering the container */
   }
+
+  #centreimgdiv{
+    text-align: center;
+  }
+
+  .loginpinimg{
+    width: 100px;
+    margin-bottom: 40px;
+    margin-top: 60px;
+    text-align: center;
+  }
   
+  .loginpinimg2{
+   width: 100px;
+   margin-top: -30px;
+  }
+
+  .ptaglogin{
+    font-size: 20px;
+  }
+
   .login-container h2 {
     margin-bottom: 1.5rem;
     color: #333;
@@ -53,12 +73,13 @@
   .login-form button {
     padding: 0.75rem;
     border: none;
-    border-radius: 4px;
-    background-color: #007bff;
+    border-radius: 30px;
+    background: linear-gradient(45deg, #f18d29, #f22197);
     color: white;
     font-size: 1rem;
     cursor: pointer;
   }
+  
   
   .login-form button:hover {
     background-color: #0056b3;
