--- a/localite/src/styles/login.css
+++ b/localite/src/styles/login.css
@@ -1,6 +1,7 @@
 /* Login Component Styles */
 .login-container {
     padding: 2rem;
+    text-align: center;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     width: 100%;
@@ -45,22 +46,18 @@
     margin-bottom: 1rem;
   }
   
-  .login-form label {
-    margin-bottom: 0.5rem;
-    font-weight: bold;
-    color: #555;
-  }
   
   .login-form input {
-    width: 100%;
+    width: 80%;
     padding: 0.5rem;
-    border: 1px solid #ccc;
+    border: none;
+    background-color: #FAE0DF;
     border-radius: 4px;
+    border-bottom: 2px solid white;
     box-sizing: border-box;
   }
   
   .login-form input:focus {
-    border-color: #007bff;
     outline: none;
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
   }
@@ -103,6 +100,7 @@
   @media (max-width: 480px) {
     .login-container {
       padding: 1rem;
+      text-align: center;
     }
   
     .login-container h2 {
@@ -112,6 +110,18 @@
     .login-form button {
       padding: 0.5rem;
       font-size: 0.875rem;
+    }
+
+    .login-form button {
+      padding: 0.75rem;
+      border: none;
+      border-radius: 30px;
+      background: linear-gradient(45deg, #f18d29, #f22197);
+      color: white;
+      font-size: 1rem;
+      cursor: pointer;
+      width: 300px;
+      margin: auto;
     }
   }
   
