--- a/localite/src/styles/home.css
+++ b/localite/src/styles/home.css
@@ -8,6 +8,16 @@ body {
   width: 55%;
 }
 
+.popup-message2 {
+  margin-top: 20px;
+  padding: 10px;
+  background-color: #000;
+  color: #fff;
+  border-radius: 4px;
+  text-align: center;
+}
+
+
 /* App.css or your main stylesheet */
 
 /* Overlay styles */
