--- a/localite/src/styles/login.css
+++ b/localite/src/styles/login.css
@@ -51,7 +51,7 @@
     width: 80%;
     padding: 0.5rem;
     border: none;
-    background-color: #FAE0DF;
+    background-color: transparent;
     border-radius: 4px;
     border-bottom: 2px solid white;
     box-sizing: border-box;
@@ -66,6 +66,13 @@
     color: red;
     margin-bottom: 1rem;
   }
+
+  .belowp{
+    color: grey;
+    font-size: 12px;
+    margin-top: 2px;
+    font-style: italic;
+  }
   
   .login-form button {
     padding: 0.75rem;
@@ -74,6 +81,31 @@
     background: linear-gradient(45deg, #f18d29, #f22197);
     color: white;
     font-size: 1rem;
+    cursor: pointer;
+  }
+
+  .lheading{
+    font-size: 26px;
+  }
+  #loginbtn {
+    padding: 0.75rem;
+    border: none;
+    border-radius: 30px;
+    background: linear-gradient(45deg, #f18d29, #f22197);
+    color: white;
+    font-size: 1rem;
+    width: 300px;
+    cursor: pointer;
+  }
+  
+  #signupbtn {
+    padding: 0.75rem;
+    border: none;
+    color: black;
+    border-radius: 30px;
+    background-color: rgb(200, 196, 196);
+    font-size: 1rem;
+    width: 300px;
     cursor: pointer;
   }
   
